--- a/static/login.html
+++ b/static/login.html
@@ -130,6 +130,6 @@
       </form>
     </div>
 
-    <script src="/js/login.js"></script>
+    <script src="/static/js/login.js"></script>
   </body>
 </html>
