--- a/static/cursos.html
+++ b/static/cursos.html
@@ -62,7 +62,7 @@
 
       <!-- Tabela de cursos -->
       <div class="card border-0 shadow-sm rounded-3 overflow-hidden">
-        <div class="table">
+        <div class="table-responsive">
           <table id="userTable" class="table table-hover">
             <thead>
               <tr>
@@ -287,7 +287,7 @@
             >
               Cancelar
             </button>
-            <button type="button" class="delete-btn" id="confirmDelete">
+            <button type="button" class="btn btn-danger" id="confirmDelete">
               Excluir
             </button>
           </div>
@@ -298,12 +298,19 @@
     <!-- Container de Notificações -->
     <div id="notification-container"></div>
 
+    <!-- Overlay de carregamento -->
+    <div id="loading-overlay" style="display: none">
+      <div class="spinner-border text-light" role="status">
+        <span class="visually-hidden">Carregando...</span>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.datatables.net/1.13.4/js/dataTables.bootstrap5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/static/js/cursos.js"></script>
   </body>
 </html>
